Add timings to midis in html

--- a/index.html
+++ b/index.html
@@ -109,20 +109,22 @@
     </div>
 
     <br/>
-    <div>Play Midi Samples:<br/>
+    <div><u>Play Examples</u><br/>
 
     <!-- &#x2B24; #8226 -->
-    &#x25CF; <a href="#" onclick="return convertMidi('TOCATTA.MID');">Tocatta</a>
-    &#x25CF; <a href="#" onclick="return convertMidi('ENTERTNR.MID');">Entertainer</a>
-    &#x25CF; <a href="#" onclick="return convertMidi('STRIVING.MID');">Striving</a> (<a href="https://archive.org/details/GravisUltrasoundMidiFiles">source</a>)
+    <i>Samples (<a href="https://archive.org/details/GravisUltrasoundMidiFiles">source</a>)</i>
+    &#x25CF; <a href="#" onclick="return convertMidi('TOCATTA.MID');">Tocatta (2:14)</a>
+    &#x25CF; <a href="#" onclick="return convertMidi('ENTERTNR.MID');">Entertainer (1:32)</a>
+    &#x25CF; <a href="#" onclick="return convertMidi('STRIVING.MID');">Striving (4:17)</a>
+    <br/>
+    <i>Super Mario Bros (<a href="http://www.gamemusicthemes.com/sheetmusic/nintendo/supermariobros/overworldtheme/">source</a>)</i>
+    &#x25CF; <a href="#" onclick="return convertMidi('Super_Mario_Bros_-_Overworld_Theme_by_BlueSCD.mid');">Overworld Theme (1:30)</a>
+
     <br/>
 
-    &#x25CF; <a href="#" onclick="return convertMidi('Super_Mario_Bros_-_Overworld_Theme_by_BlueSCD.mid');">Super Mario Bros Overworld Theme</a>
-    (<a href="http://www.gamemusicthemes.com/sheetmusic/nintendo/supermariobros/overworldtheme/">source</a>)
-    <br/>
-
-    &#x25CF; <a href="#" onclick="return convertMidi('prelude.mid');">FF9 Prelude</a>
-    &#x25CF; <a href="#" onclick="return convertMidi('melodies_of_life.mid');">FF9 Melodies of life</a> (<a href="http://www.midishrine.com/index.php?id=87">source</a>)
+    <i>Final Fantasy 9 (<a href="http://www.midishrine.com/index.php?id=87">source</a>)</i>
+    &#x25CF; <a href="#" onclick="return convertMidi('prelude.mid');">Prelude (4:29)</a>
+    &#x25CF; <a href="#" onclick="return convertMidi('melodies_of_life.mid');">Melodies of life (7:32)</a>
     </div>
 
     <button onclick="openFile()">Open Midi and Convert!</button>
